# farm-loan-risk-analytics

./: README.md  TODO.md  requirements.txt
data/raw/: loans.csv  usda_crop_data.csv
etl/: generate_loan.py  generate_weather.py  main.py  transform_data.py
etl/sql/: create_tables.sql  load_dimensions.sql
projects/farm-loan-risk-bi/: .gitignore
projects/farm-loan-risk-bi/dashboard/: Dashboard.pbix
projects/farm-loan-risk-bi/etl/: db_utils.py  generate_loan.py  load_to_sqlserver.py
projects/farm-loan-risk-bi/etl/sql/: create_tables.sql  load_facts.sql
projects/farm-loan-risk-bi/sql/queries/: risk_distribution.sql  top_10_highest_risk_loans.sql
projects/flight-data-pipeline/: .env.example  README.md  TODO.md  requirements.txt
projects/flight-data-pipeline/ingestion/: api_client.py  azure_client.py  config.py  ingest.py  logger.py
projects/flight-tracking/: README.md  TODO.md
projects/flow-itam/: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
projects/flow-itam/src/flow_itam/: domain_test.py
projects/flow-itam/src/flow_itam/domain/: asset.py  assignment.py  common.py  location.py  user.py  vendor.py
sql/: facts.sql  slaging_loans.sql
sql/queries/: average_risk_score_by_region.sql  percent_of_portfolio.sql  total_loan_exposure_by_crop.sql
